--- a/jqueryui-0.1/app/views/jqueryui/Demo/index.html
+++ b/jqueryui-0.1/app/views/jqueryui/Demo/index.html
@@ -5,7 +5,7 @@
 <section>
 	<h2>autocomplete - label only</h2>
 
-	<p>
+	<p class="demo">
 	<input name="location" class="autocomplete" data-url="@{jqueryui.Demo.autocompleteLabel()}"> Type to populate the
 	list, and select a label from the list. </p>
 
@@ -25,7 +25,7 @@
 <section>
 	<h2>autocomplete - label and value</h2>
 
-	<form>
+	<form class="demo">
 		<p>
 		<input name="location.id" class="autocomplete-relation" data-url="@{jqueryui.Demo.autocompleteLabelAndValue()}">
 		Type to populate the list, then select the value for a particular label. </p>
