--- a/jqueryui-0.1/app/views/jqueryui-demo.html
+++ b/jqueryui-0.1/app/views/jqueryui-demo.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/playmanual/manual.css'}">
 <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/playmanual/wiki.css'}">
 <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/jquery-ui-1.8.13.custom.css'}">
+<link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/demo.css'}">
 <script src="@{'/public/javascripts/jquery-1.5.2.min.js'}" type="text/javascript" charset="utf-8"></script>
 <script src="@{'/public/javascripts/jquery-ui-1.8.13.custom.min.js'}" type="text/javascript" charset="utf-8"></script>
 <script src="@{'/public/javascripts/jqueryui-client.js'}" type="text/javascript" charset="utf-8"></script>
