--- a/jqueryui-0.1/public/stylesheets/demo.css
+++ b/jqueryui-0.1/public/stylesheets/demo.css
@@ -1,3 +1,5 @@
 .demo { background-color: white; padding: 1em; }
 h2 { border-top: 4px solid #E0E0E0; margin-top:1.5em; padding-top:0.5em; }
 .ui-widget-content { font-size: 90%; }
+pre { background-color: ghostWhite; border-left: 4px solid #E0E0E0; 
+font-size: 90%; line-height: 1.5em; padding: 0.5em; }
