--- a/jqueryui-0.1/app/views/demo-layout.html
+++ b/jqueryui-0.1/app/views/demo-layout.html
@@ -10,6 +10,7 @@
 <script src="@{'/public/javascripts/jquery-ui-1.8.13.custom.min.js'}" type="text/javascript" charset="utf-8"></script>
 <script src="@{'/public/javascripts/accordion.js'}" type="text/javascript" charset="utf-8"></script>
 <script src="@{'/public/javascripts/autocomplete.js'}" type="text/javascript" charset="utf-8"></script>
+<script src="@{'/public/javascripts/tabs.js'}" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 <div class="wrapper">
