Add date picker example

--- a/jqueryui-0.1/app/views/demo-layout.html
+++ b/jqueryui-0.1/app/views/demo-layout.html
@@ -11,6 +11,7 @@
 <script src="@{'/public/javascripts/accordion.js'}" type="text/javascript" charset="utf-8"></script>
 <script src="@{'/public/javascripts/autocomplete.js'}" type="text/javascript" charset="utf-8"></script>
 <script src="@{'/public/javascripts/tabs.js'}" type="text/javascript" charset="utf-8"></script>
+<script src="@{'/public/javascripts/datepicker.js'}" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 <div class="wrapper">
