--- a/jqueryui-0.1/public/stylesheets/demo.css
+++ b/jqueryui-0.1/public/stylesheets/demo.css
@@ -3,3 +3,4 @@ h2 { border-top: 4px solid #E0E0E0; margin-top:1.5em; padding-top:0.5em; }
 .ui-widget-content { font-size: 90%; }
 pre { background-color: ghostWhite; border-left: 4px solid #E0E0E0; 
 font-size: 90%; line-height: 1.5em; padding: 0.5em; }
+input.date { margin-right:0.5em; }
