Fix layout to load one script

--- a/jqueryui-0.1/app/views/jqueryui/DatePicker/index.html
+++ b/jqueryui-0.1/app/views/jqueryui/DatePicker/index.html
@@ -1,5 +1,9 @@
 #{extends 'jqueryui/layout.html'/}
 #{set title:'Date picker'/}
+#{set 'moreScripts'}
+<script src="@{'/public/javascripts/jquery.ui.datepicker-fr.js'}" type="text/javascript" charset="utf-8"></script>
+<script src="@{'/public/javascripts/jquery.ui.datepicker-nl.js'}" type="text/javascript" charset="utf-8"></script>
+#{/set}
 
 <h2>Date picker - server-side configuration</h2>
 
