--- a/jqueryui-0.1/app/views/jqueryui/layout.html
+++ b/jqueryui-0.1/app/views/jqueryui/layout.html
@@ -8,12 +8,10 @@
 	<link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/demo.css'}">
 	<script src="@{'/public/javascripts/jquery-1.5.2.min.js'}" type="text/javascript" charset="utf-8"></script>
 	<script src="@{'/public/javascripts/jquery-ui-1.8.13.custom.min.js'}" type="text/javascript" charset="utf-8"></script>
-	<script src="@{'/public/javascripts/accordion.js'}" type="text/javascript" charset="utf-8"></script>
-	<script src="@{'/public/javascripts/autocomplete.js'}" type="text/javascript" charset="utf-8"></script>
-	<script src="@{'/public/javascripts/tabs.js'}" type="text/javascript" charset="utf-8"></script>
-	<script src="@{'/public/javascripts/jquery.ui.datepicker-fr.js'}" type="text/javascript" charset="utf-8"></script>
-	<script src="@{'/public/javascripts/jquery.ui.datepicker-nl.js'}" type="text/javascript" charset="utf-8"></script>
-	<script src="@{'/public/javascripts/datepicker.js'}" type="text/javascript" charset="utf-8"></script>
+	#{get 'moreScripts'/}
+	#{if request.controller != 'jqueryui.Demo'}
+	<script src="@{'/public/javascripts/' + request.controllerClass.simpleName.toLowerCase() + '.js'}" type="text/javascript" charset="utf-8"></script>
+	#{/if}
 </head>
 <body data-dateformat="${play.configuration['date.format']}">
 <div class="wrapper">
