Add progress bar example

--- a/jqueryui-0.1/app/views/jqueryui/Demo/index.html
+++ b/jqueryui-0.1/app/views/jqueryui/Demo/index.html
@@ -9,6 +9,7 @@
 	<li><a href="@{jqueryui.Autocomplete.index()}">Autocomplete</a></li>
 	<li><a href="@{jqueryui.DatePicker.index()}">Date picker</a></li>
 	<li><a href="@{jqueryui.Dialog.index()}">Dialog</a></li>
+	<li><a href="@{jqueryui.Progressbar.index()}">Progressbar</a></li>
 	<li><a href="@{jqueryui.Tabs.index()}">Tabs</a></li>
 </ul>
 
