--- a/jqueryui-0.1/public/stylesheets/demo.css
+++ b/jqueryui-0.1/public/stylesheets/demo.css
@@ -1,3 +1,4 @@
+/* Page template */
 .demo { background-color: white; padding: 1em; }
 h1 a { text-decoration: none; }
 a:hover { color:blue; text-decoration:underline; }
@@ -6,9 +7,14 @@ h2 { border-top: 4px solid #E0E0E0; margin-top:1.5em; padding-top:0.5em; }
 pre { background-color: ghostWhite; border-left: 4px solid #E0E0E0;
 font-size: 90%; line-height: 1.5em; padding: 0.5em; }
 
+/* Datepicker */
 input.date { margin-right:0.5em; }
 
+/* Dialog */
 div.dialog table { font-size:90%; border-collapse:collapse; width:100%; }
 div.dialog tr.odd { background-color:#eee; }
 div.dialog tr:hover td { background-color:#33c; color:white; }
 div.dialog th { text-align:left;  }
+
+/* Progress bar */
+body.progressbar div.demo { width:50%; }
