--- a/jqueryui-0.1/app/views/jqueryui/Demo/index.html
+++ b/jqueryui-0.1/app/views/jqueryui/Demo/index.html
@@ -5,11 +5,29 @@
 <h2>Widgets</h2>
 
 <ul>
-	<li><a href="@{jqueryui.Accordion.index()}">Accordion</a></li>
-	<li><a href="@{jqueryui.Autocomplete.index()}">Autocomplete</a></li>
-	<li><a href="@{jqueryui.DatePicker.index()}">Date picker</a></li>
-	<li><a href="@{jqueryui.Dialog.index()}">Dialog</a></li>
-	<li><a href="@{jqueryui.Progressbar.index()}">Progressbar</a></li>
-	<li><a href="@{jqueryui.Tabs.index()}">Tabs</a></li>
+	<li>
+		<a href="@{jqueryui.Accordion.index()}">Accordion</a>
+		- collapsible content sections that are loaded via Ajax when opened.
+	</li>
+	<li>
+		<a href="@{jqueryui.Autocomplete.index()}">Autocomplete</a>
+		- Ajax suggest-while-you-type for form controls.
+	</li>
+	<li>
+		<a href="@{jqueryui.DatePicker.index()}">Date picker</a>
+		- date selector pop-up that uses the application date format and language.
+	</li>
+	<li>
+		<a href="@{jqueryui.Dialog.index()}">Dialog</a>
+		- dialogue box that can be used as a selector pop-up for form values.
+	</li>
+	<li>
+		<a href="@{jqueryui.Progressbar.index()}">Progressbar</a>
+		- progress indicator that uses web sockets to report a job’s completion percentage.
+	</li>
+	<li>
+		<a href="@{jqueryui.Tabs.index()}">Tabs</a>
+		- content sections that are loaded via Ajax when selected.
+	</li>
 </ul>
 
